:heavy_check_mark: fixing the labels that had a broken layout

--- a/assets/css/Consulta.css
+++ b/assets/css/Consulta.css
@@ -68,7 +68,6 @@ body {
   grid-template-areas:
     "sidebar nav nav nav"
     "sidebar main main main";
-  /* grid-gap: 0.2rem; */
 }
 
 .navbar {
@@ -323,7 +322,6 @@ main {
   align-items: right;
   color: #f3f4f6;
   margin-bottom: 10px;
-  /* color: #E85B6B; */
 }
 
 .sidebar__img {
@@ -410,7 +408,6 @@ main {
 @media only screen and (max-width: 978px) {
   .container {
     grid-template-columns: 1fr;
-    /* grid-template-rows: 0.2fr 2.2fr; */
     grid-template-rows: 0.2fr 3fr;
     grid-template-areas:
       "nav"
@@ -472,8 +469,8 @@ main {
   align-items: left;
 }
 
-.column {
-  padding: 0 0 0 40px;
+.column:nth-child(2) {
+  padding-left: 50px;
 }
 
 .inputs-form{
@@ -498,7 +495,7 @@ main {
 .wrapper input[type=radio] {
     border-radius: 50%;
     width: 30px;
-    height: 15px;  
+    height: 15px;
     position: relative;
     top: 1px;
 }
@@ -506,14 +503,6 @@ main {
 #labelClassificacaoCliente {
     display: block;
     width: 100%;
-}
-
-.column {
-    padding: 0 0 0 40px;
-}
-
-#LabelsRadios{
-  margin-left: 100%;
 }
 
 .btn-group {
@@ -562,7 +551,7 @@ h1 {
 .form input {
 	width: 100%;
 	margin-bottom: 21px;
-    
+
     margin-bottom: 2rem;
 }
 
@@ -631,13 +620,13 @@ table{
 button.btn:hover {
 	cursor: pointer;
 	background: rgb(255, 0, 0);
-	transition: 0.2s;         
+	transition: 0.2s;
 }
 
 #VerMaisCliente:hover{
 cursor: pointer;
 background: rgb(255, 0, 0);
-transition: 0.2s; 
+transition: 0.2s;
 }
 
 #iCantoBotao{
